	  From Alan Carvalho de Assis. (2013-9-30).
	* net/net_sendfile:  The high performance sendfile logic is
	  now functional.  From Max Holtzberg (2013-9-30).
	* tools/define.sh:  'cut' long because as it once did.  Script
	  adapted to observed behavior (2013-9-30).
	* include/nuttx/net/route.h and net/net_*route.c:  Partial
	  implementation of a routing table. Not yet hooked into the
	  build system (2013-10-1)
	* include/net/route.h:  Defines the application interface to
	  the routing table (2013-10-2).
	* configs/spark:  Add configuratino for the Spark Core.  The
	  initial check-in is basically the Maple Mini board (2013-10-2).
	* include/net/route.h and libc/net/lib_addroute.c and delroute.c:
	  Add an application interface to manage the routing table
	  (2013-10-2).
	* arch/arm/src/sama5/sam_adc.c and sam_tsc.c:  The SAMA5
	  touschscreen drive is basically functional) (2013-10-3)
	* arch/arm/src/sama5/chip/sam_lcdc.h:  Add SAMA5 LCD register
	  definition header file (2013-10-4).
	* net/netdev_findbyaddr.c:  Now (1) uses the routing table
	  if available to look up the router to get to a remote network,
	  and (2) if there is only a single network device and no
	  route, then it will simply return that single device.  The
	  ARP logic will use the default router address associated with
	  the interface in this case (2013-10-5).
	* net/netdev_router.c and net/uip/uip-arp.c:  When the target IP address
	  does not lie on the device's networker when we have a routing table,
	  looking the the correct router IP address to use in the ARP request.
	  In that case, we want the MAC address of the router, not of the the
	  target endpoint (2013-10-5).
	* net/netdev_rxnotify.c and others: Use the new signature of rxnotify
	  caused by the routing table.  From Max Holtzberg (2013-10-6).
	* arch/arm/src/sama5/sam_lcdc.c and .h: Empty "skeleton" file that
	  will eventually become an LCDC driver for the SAMA5 (2013-10-6).
