@@ -5717,4 +5717,6 @@
 	  caused by the routing table.  From Max Holtzberg (2013-10-6).
 	* arch/arm/src/sama5/sam_lcdc.c and .h: Empty "skeleton" file that
 	  will eventually become an LCDC driver for the SAMA5 (2013-10-6).
-
+	* net/net_close.c, net/uip/uip_tcpcon, and include/nuttx/net/uip/uip-tcp.h:
+	  Make net_close() nonblocking and free unestablished connections if no
+	  free connections available.  From Max Holtzber (2013-10-6).
